# university

Individual Project [21_22]/FYP-main/: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
Individual Project [21_22]/FYP-main/.github/workflows/: python_test.yml
Individual Project [21_22]/FYP-main/notebooks/: aa-test.ipynb  aa_prototype.ipynb  aa_prototype_2.ipynb  aa_prototype_v3.ipynb  combine_snowball_data.ipynb  data-set-freq-analysis.ipynb  data-split.ipynb  dataset_to_aa_features.ipynb  dev_select_seed_users.ipynb  find_suspicous_users.ipynb  find_suspicous_users_v2.ipynb  fix_old_encrypted_data.ipynb  get_data_length.ipynb  graph-analysis.ipynb  graph.ipynb  influence.ipynb  initial_seed_users_to_database.ipynb  limit-graph-output.ipynb  network_influence.ipynb  other_prod_select_seed_users.ipynb  prod_select_seed_users.ipynb  reply-graph-weighted.ipynb  snowball_prototype.ipynb  snowball_prototype_v2.ipynb  snowball_prototype_v3.ipynb  subgraph_sockpuppet.ipynb  subgraph_sockpuppet_v2.ipynb  test-load-data.ipynb  tie_up.ipynb  topic-mention.ipynb  train_ai.ipynb  train_ai_.ipynb  twitter_api_examples.ipynb
Individual Project [21_22]/FYP-main/notebooks/from_colab/: get_predictions.ipynb  get_predictions_network.ipynb  network_train_ai.ipynb  train_ai.ipynb  v2_get_predictions_network.ipynb  v2_network_train_ai.ipynb
Individual Project [21_22]/FYP-main/notebooks/tweet_data_set/: create_tweet_dataset_database_one.ipynb  create_tweet_dataset_database_two.ipynb  one.py  (+3 more)
Individual Project [21_22]/FYP-main/tests/: test_secrets.py
(+235 files in other folders)
